# FreeCAD_GDML_Test_Collection

./: .gitignore  FlatExpand_New_small_pet_testing_array2.FCStd  GDMLCOGcalcDirectory.py  GDMLExportDirectory.FCMacro  GDMLExportDirectory.Saved.FCMacro  GDMLImportDirectory.FCMacro  New _small_pet_testing_array2.FCStd  NoArray_New_small_pet_testing_array2.FCStd  PathArray.FCStd  README.md  array-of-mother-daughter-vols-wrong.FCStd  batch.mac  copied_Arrays_CN4.FCStd  crystal_phantom_Assembly.FCStd  crystal_phantom_link_array.FCStd  filter_load_gdml_CM.awk  geant4COG.sh  geant4_exception_files.txt  geant4_failures.txt  initInter.mac  saveImage.py  small_pet_6.71cm_8by8MPPC 2.FCStd  small_pet_testing_array2.FCStd  small_pet_testing_array2_Expanded.FCStd  small_pet_testing_array3.FCStd  small_pet_testing_array4.FCStd  solids.FCStd  testSketchBox.FCStd  vis.mac
FC_COGs/: AssemblyTest.txt  COG_Expanded_simple_array.txt  COG_TestExtrudeSketch-Circle.txt  COG_TestExtrudeSketch-Outer.txt  COG_TestExtrudeSketchBox.txt  COG_simple_array.txt  InvoluteGear.txt  Loft.txt  MultiCommon.txt  PathArray.txt  PathArray2.txt  PointArray.txt  Sweep.txt  Target-Unmeshed.txt  UnionTest.txt  array-of-array-of-solid.txt  array-of-mother-daughter-vols-correct.txt  arrayTest-1-a.txt  arrayTest-1.txt  arrayTest-2.txt  arrayTest-3.txt  arrayTest-5.txt  arrayTest-6_scaled.txt  arrayTest-7.txt  arrayTest-7_scaled.txt  assemblyTest-A.txt  borderTest-1.txt  currentFile  daughter_in_array.txt  duplicated_bolts.txt  duplicated_nuts.txt  extrudeAllShapes.txt  extrudeCircleTest-a.txt  extrudeLimitation-1.txt  extrudeTester.txt  extrudedHyperbola.txt  extrudedParabola-2.txt  fillet.txt  fillet_Gmshed.txt  importObjTest-edited.txt  (+23 more)
FC_exported_gdml/: AssemblyTest-worldVOL.gdml  AssemblyTest-worldVOL.gdml.out  COG_Expanded_simple_array-World.gdml  COG_Expanded_simple_array-World.gdml.out  COG_TestExtrudeSketch-Circle-worldVOL.gdml  COG_TestExtrudeSketch-Circle-worldVOL.gdml.out  COG_TestExtrudeSketch-Circle-worldVOL.gdml.out.txt  COG_TestExtrudeSketch-Outer-worldVOL.gdml  COG_TestExtrudeSketch-Outer-worldVOL.gdml.out  COG_TestExtrudeSketch-Outer-worldVOL.gdml.out.txt  COG_TestExtrudeSketchBox-worldVOL.gdml  COG_TestExtrudeSketchBox-worldVOL.gdml.out  COG_TestExtrudeSketchBox-worldVOL.gdml.out.txt  COG_simple_array-World.gdml  COG_simple_array-World.gdml.out  Chamfer_and_fillet-worldVOL.gdml  Chamfer_and_fillet-worldVOL.gdml.out  Chamfer_and_fillet-worldVOL.gdml.out.txt  Expanded_simple_array-World.gdml  Expanded_simple_array-World.gdml.out  InvoluteGear-worldVOL.gdml  InvoluteGear-worldVOL.gdml.out  InvoluteGear-worldVOL.gdml.out.txt  Loft-worldVOL.gdml  Loft-worldVOL.gdml.out  Loft-worldVOL.gdml.out.txt  MultiCommon-worldVOL.gdml  MultiCommon-worldVOL.gdml.out  NewBS-NoArray-borderTest-1-worldVOL.gdml  NewBS-NoArray-borderTest-1-worldVOL.gdml.out  NewBS-NoArray-borderTest-1-worldVOL.gdml.out.txt  NoArray-borderTest-1-worldVOL.gdml  NoArray-borderTest-1-worldVOL.gdml.out  PathArray-worldVOL.gdml  PathArray-worldVOL.gdml.out  PathArray-worldVOL.gdml.out.txt  PathArray2-worldVOL.gdml  PathArray2-worldVOL.gdml.out  PathArray2-worldVOL.gdml.out.txt  PointArray-of-part-worldVOL.gdml  (+225 more)
FC_test_files/: AssemblyTest.FCStd  AssemblyTest.FCStd1  COG_Expanded_simple_array.20250326-145103.FCBak  COG_Expanded_simple_array.FCStd  COG_TestExtrudeSketch-Circle.FCStd  COG_TestExtrudeSketch-Outer.20250307-151632.FCBak  COG_TestExtrudeSketch-Outer.FCStd  COG_TestExtrudeSketchBox.FCStd  CRASH_vol31.FCStd.txt  Chamfer_and_fillet.FCStd  InvoluteGear.20250307-151632.FCBak  InvoluteGear.FCStd  Loft.FCStd  MultiCommon.20250307-151632.FCBak  MultiCommon.FCStd  MultiCommon.FCStd1  NameTest.FCStd  NameTest.FCStd1  PathArray.FCStd  PathArray2.FCStd  PathArray2.FCStd1  PointArray-of-part.FCStd-problem.txt  PointArray.20250307-151632.FCBak  PointArray.FCStd  Polyhedra.FCStd  Sweep.FCStd  Target-Unmeshed.20250307-151632.FCBak  Target-Unmeshed.FCStd  TestExtrudeSketch-1.FCStd  TestExtrudeSketch-Circle-a.FCStd  TestExtrudeSketch-Circle.FCStd.COGfail  TestExtrudeSketch-Outer-a.FCStd  TestExtrudeSketch-Outer.FCStd.txt  TestExtrudeSketchBox.FCStd  UnionTest.20250307-151632.FCBak  UnionTest.FCStd  array-of-Part.FCStd  array-of-array-of-solid-offcenter.20250326-144401.FCBak  (+91 more)
MH_G4_Example/: Makefile  (+18 more)
MH_G4_Example/KS_parseCheck/: CMakeLists.txt  parseCheck.cpp  parseCheck.cpp,save  savedGPTcode.cpp
MH_G4_Example/MH_G01/: CMakeLists.txt  GNUmakefile  Makefile  README  batch.mac  cmake_install.cmake  load_gdml_color.cc  load_gdml_color.cc.save
MH_G4_Example/MH_G01/include/: GeometryMoments.hh  InertiaMatrix.hh  InertiaMatrix.icc  MomentsEstimator.hh  MultiUnionMomentsEstimator.hh
MH_G4_Example/MH_G01/include/include/: Moments.hh
MH_G4_Example/MH_G01/src/: ActionInitialization.cc  GeometryMoments.cc  InertiaMatrix.cc  Moments.cc  MomentsEstimator.cc  MultiUnionMomentsEstimator.cc
MH_G4_Example/myG01/: CMakeLists.txt  GNUmakefile  Makefile  cmake_install.cmake  compare_inertias.py  compile_flags.txt  extrusion.wxmx  load_gdml_color.cc  paraboloid.wxmx  polyhedra.wxmx  sphere.wxmx  tetrahedron.wxmx  torus.wxmx  twists.wxmx
MH_G4_Example/myG01/include/: ExtrusionMoments.hh  InertiaMatrix.hh  Moments.hh  MomentsCalculator.hh  MomentsEstimator.hh  MultiUnionMomentsEstimator.hh  PolyhedraMoments.hh  TessellationMoments.hh  myPhysicsList.hh
MH_G4_Example/myG01/src/: ExtrusionMoments.cc  GeometryMoments.cc  InertiaMatrix.cc  Moments.cc  MomentsCalculator.cc  MomentsEstimator.cc  MultiUnionMomentsEstimator.cc  PolyhedraMoments.cc  TessellationMoments.cc  myPhysicsList.cc
(+142 files in other folders)
